[package]
name = "rustlf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["staticlib"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
panic = "abort"

[dependencies]
tlf = { path = "tlf-sys" }
bbqueue = "0.5.1"
thiserror = "1.0.37"
crossbeam = "0.8"
oneshot = "0.1"
libc = "0.2"
cstr = "0.2"

[build-dependencies]
cbindgen = "0.24.3"
