[package]
name = "rustlf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["staticlib", "lib"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
panic = "abort"
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[dependencies]
tlf = { path = "tlf-sys" }
bbqueue = "0.5.1"
thiserror = "1.0.37"
oneshot = "0.1"
libc = "0.2"
cstr = "0.2"
flume="0.11"
rayon="1.7"
nom="7.1"
linereader="0.4"
rand="0.8"

[build-dependencies]
cbindgen = "0.25"
